# streammed

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements-dev.txt
.github/workflows/: python-dev.yaml
app/backend/: Dockerfile  main.py  requirements.txt
app/frontend/: Dockerfile  main.py  requirements.txt  utils.py
tests/: test_backend.py  test_frontend.py  test_frontend_utils.py
