[project]
requires-python = ">=3.8,<3.12"

[tool.ruff]
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["E501", "E701"] # line too long, multiple statements on one line
src = ["app/backend", "app/frontend", "tests"]

[tool.ruff.lint.isort]
known-local-folder = ["app", "backend", "frontend"]

[tool.black]
line-length = 100

[tool.coverage.paths]
source = ["app"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [".", "app/backend", "app/frontend"]
